--- a/docker_scripts/environment.yml
+++ b/docker_scripts/environment.yml
@@ -1,12 +1,22 @@
 name: base
+channels:
+  - pytorch
+  - anaconda
+  - conda-forge
+  - defaults
 dependencies:
-- conda-forge::cudatoolkit=11.3.1
-- numpy=1.21.2
-- pillow=8.4.0
-- pip=21.2.4
-- python=3.9.7
-- pytorch::pytorch=1.10.2=py3.9_cuda11.3_cudnn8.2.0_0
-- scipy=1.7.3
-- pytorch::torchvision=0.11.3=py39_cu113
-- ffmpeg=4.2.2
-- tqdm=4.62.3
+  - pytorch::pytorch=1.10.2=py3.9_cuda11.3_cudnn8.2.0_0
+  - pytorch::torchvision=0.11.3=py39_cu113
+  - cudatoolkit=11.3.1
+  - psutil
+  - python=3.9.7
+  - pip=21.2.4
+  - openblas-devel
+  - tqdm
+  - nose
+  - cython
+  - pysoundfile
+  - pip:
+    - progressbar2
+    - matplotlib
+    - torchaudio==0.10.2+cu113
