--- a/docker_scripts/Dockerfile
+++ b/docker_scripts/Dockerfile
@@ -24,14 +24,14 @@ WORKDIR /app
 
 
 USER root
-RUN groupadd -g 1134 erlygin
+RUN groupadd -g 1001 devel
 
-RUN adduser --disabled-password --uid 1133 --gid 1134 --gecos '' --shell /bin/bash erlygin \
- && chown -R erlygin:erlygin /app
-RUN echo "erlygin ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/90-erlygin
-USER erlygin
+RUN adduser --disabled-password --uid 1001 --gid 1001 --gecos '' --shell /bin/bash devel \
+ && chown -R devel:devel /app
+RUN echo "devel ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/90-devel
+USER devel
 
-ENV HOME=/home/erlygin
+ENV HOME=/home/devel
 
 
 
